testData/commands/errors/parent/test_defaultMemberMermissions.ts
import { defineCommand } from "../../../../definitions";

export default defineCommand({
    key: "test_defaultMemberPermissions",
    defaultMemberPermissions: []
});
